Fix whitespace and header style

--- a/css/matic.css
+++ b/css/matic.css
@@ -116,7 +116,6 @@ h2 {
   line-height: 180%;
   padding-left: 15px;
   width: 200px;
-  float: left;
 }
 h3,
 h4,
